--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 streamlit==1.28.0
-pandas==2.1.4
+pandas==2.0.3
 numpy==1.24.3
 scikit-learn==1.3.0
-matplotlib==3.8.0
-seaborn==0.13.0
 plotly==5.17.0
-joblib==1.3.2
-xgboost==1.7.6
-lightgbm==4.1.0
-catboost==1.2.2
-imbalanced-learn==0.11.0
-requests>=2.31.0
+matplotlib==3.7.0
+seaborn==0.12.0
+joblib==1.3.0
+requests==2.31.0
